# notes

./: .envrc  .gitignore  FIXME copy.json  FIXME.json  LOOKUP.json  NEED-ATTENTION.json  PARTITION.json  README.md  SORT.json  STATUS  SUMMARY.json  bookmarks.html  categories copy.json  categories.json  categories.txt  config.json  general-tech.json  lint_categories.py  lint_categories.txt  matrix.txt  notes.py  pad.txt  pyproject.toml  queries.json  selected.json  subtags.txt  tags.json  tags.txt  tagsOLD.json  tags_key.txt  tmp.txt  tmp2.txt  tmp3.txt  tmp4.txt  tmp5.txt  tmp6.txt  tmp7.txt  tmp8.txt
_SORT/: pad.txt
borrowed/: borrowed.jn
experimental/: sort.py
json-notes/: SORT.json  biological-sciences.json  config-work.json  cs-books.json  cs.json  fitness.json  general-tech.json  general.json  humanities.json  julia.json  language-learning.json  math-books.json  mathematics.json  miscellaneous.json  ml-ai-AUTOTAGGED.json  ml-ai-FIXME.json  ml-ai-PRE.json  ml-ai.json  nebokrai-software.json  nebokrai.json  non-biological-sciences.json  nvim-plugins.json  nvim.json  philosophy copy.json  philosophy-books.json  philosophy.json  practical-living.json  proglang-other.json  proglangs.json  projects.json  python.json  social-sciences copy.json  social-sciences.json  software-later-or-nah.json  software.json  work.json
linked-files/: a-mind-for-numbers.md  analysis-of-faith.md  announceement-post.md  autoepistegraphy.md  best-life-advice.md  bitext-alignment-notes.md  career-choice-notes.md  clavix.md  color-themes.md  compliments-and-advice.md  config-checklist.md  (+70 more)
(+57 files in other folders)
